pipelines/argocd-apps/platform-apps/managed/aa/components/website/overlays/dev/patches/deploy-website-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-api
  namespace: aa
spec:
  template:
    spec:
      containers:
        - name: api
          image: gcr.io//aa/website/dev/api:latest
