pipelines/argocd-apps/platform-apps/managed/aa/components/website/overlays/dev/patches/deploy-website-mongo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-mongo
  namespace: aa
spec:
  template:
    spec:
      containers:
        - name: mongo
          image: mongo:3.6.23
