pipelines/argocd-apps/platform-apps/managed/aa/components/website/overlays/dev/patches/deploy-website-static.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-static
  namespace: aa
spec:
  template:
    spec:
      containers:
        - name: static
          image: gcr.io//aa/website/dev/static:latest
